--- a/themes/openy_themes/openy_carnation/src/scss/component/_toolbar.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/component/_toolbar.scss
@@ -13,11 +13,19 @@ body.toolbar-fixed {
 
   .fixed-top {
     top: 39px;
+
+    &.sidebar {
+      top: 109px;
+    }
   }
 
   // Horizontal.
   &.toolbar-horizontal.toolbar-tray-open .fixed-top {
     top: 79px;
+
+    &.sidebar {
+      top: 149px;
+    }
   }
 
   // Vertical Open.
