--- a/themes/openy_themes/openy_carnation/templates/menu/menu--main--mobile-menu.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/menu/menu--main--mobile-menu.html.twig
@@ -31,7 +31,7 @@
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    <ul{{ attributes.addClass('navbar nav nav-fill align-items-center nav-level-1 pt-3 pb-0 m-0') }}>
+    <ul{{ attributes.addClass('nav flex-column') }}>
     {% for item in items %}
       {% set ia = item.attributes %}
       {% set ia = ia.addClass('nav-item nav-level-2') %}
@@ -50,12 +50,6 @@
         {% endif %}
       </li>
     {% endfor %}
-     {# Search icon #}
-      <li class="nav-level-2 site-search">
-        <button class="navbar-toggler pr-3" type="button" data-toggle="collapse" data-target=".page-head__search" aria-controls="page-head__search" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fa fa-search" aria-hidden="true"></i>
-        </button>
-      </li>
     </ul>
   {% endif %}
 {% endmacro %}
@@ -63,16 +57,16 @@
 {% macro menu_links_level_2(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    <ul class="dropdown-menu row-level-2 d-flex fade">
+    <ul class="dropdown-menu row-level-2">
     {% for item in items %}
       {% set ia = item.attributes.addClass(['nav-level-3 col-md-3 col-lg-2 menu-item-' ~ item.title|clean_class]) %}
       <li{{ ia }}>
         {% if item.below %}
           <a href="{{ item.url }}">
-            <div class="section-icon"></div>
+            <i class="fa fa-angle-right" aria-hidden="true"></i>
             {{ item.title }}
           </a>
-          {{ menus.menu_links_level_3(item.below, item, attributes, menu_level) }}
+          {#{{ menus.menu_links_level_3(item.below, item, attributes, menu_level) }}#}
         {% else %}
           {{ link(item.title, item.url) }}
         {% endif %}
