--- a/themes/openy_themes/openy_carnation/src/scss/_init.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/_init.scss
@@ -1,4 +1,5 @@
 /* generated with grunt-sass-globbing */
 
+@import "presentation/functions";
 @import "presentation/variables";
 @import "presentation/mixins";
