--- a/themes/openy_themes/openy_carnation/src/scss/layouts/_mob.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/layouts/_mob.scss
@@ -9,18 +9,18 @@
       padding: 5px;
     }
 
-    .fa.fa-search.search-input-decoration {
-      position: absolute;
-      right: 25px;
-      top: 16px;
-      color: $pink;
-      font-size: 18px;
-    }
+    //.fa.fa-search.search-input-decoration {
+    //  position: absolute;
+    //  right: 25px;
+    //  top: 16px;
+    //  color: $pink;
+    //  font-size: 18px;
+    //}
   }
-
-  body.with-banner .banner-zone-node {
-    margin-top: 52px;
-  }
+  //
+  //body.with-banner .banner-zone-node {
+  //  margin-top: 52px;
+  //}
 
   .page-head__top-menu {
     #block-openy-carnation-main-menu .menu-item-home {
@@ -28,68 +28,68 @@
     }
   }
 
-  .top-navs {
-    .navbar-default {
-      background-color: $blue;
-      border-color: $blue;
-
-      .navbar-toggle {
-        .icon-bar {
-          background-color: white;
-        }
-
-        &:hover {
-          background: transparent;
-        }
-      }
-    }
-
-    .name.navbar-brand {
-      display: none;
-    }
-
-    &.affix {
-      background: none !important;
-    }
-
-    &.fixed-top.visible-xs.visible-sm.affix-top {
-      height: 0 !important;
-    }
-  }
+  //.top-navs {
+  //  .navbar-default {
+  //    background-color: $blue;
+  //    border-color: $blue;
+  //
+  //    .navbar-toggle {
+  //      .icon-bar {
+  //        background-color: white;
+  //      }
+  //
+  //      &:hover {
+  //        background: transparent;
+  //      }
+  //    }
+  //  }
+  //
+  //  .name.navbar-brand {
+  //    display: none;
+  //  }
+  //
+  //  &.affix {
+  //    background: none !important;
+  //  }
+  //
+  //  &.fixed-top.visible-xs.visible-sm.affix-top {
+  //    height: 0 !important;
+  //  }
+  //}
 
   .without-banner .viewport {
     margin-top: 52px !important;
   }
 
-  .sidebar {
-    top: 52px;
-    background: $blue;
-
-    .page-head__top-menu li a {
-      padding: 10px 0;
-      color: white;
-    }
-
-    .nav-level-2.show,
-    .row-level-2 {
-      background-color: transparent;
-    }
-
-    .nav-level-2.show .row-level-2 {
-      border-bottom: 1px solid rgba(white, 0.2);
-    }
-
-    .nav-level-3 {
-      .row-level-3 {
-        //display: none;
-      }
-
-      &.show .row-level-3 {
-        display: block;
-        border-bottom: 1px solid $gray-300;
-      }
-    }
-  }
+  //.sidebar {
+  //  top: 52px;
+  //  background: $blue;
+  //
+  //  .page-head__top-menu li a {
+  //    padding: 10px 0;
+  //    color: white;
+  //  }
+  //
+  //  .nav-level-2.show,
+  //  .row-level-2 {
+  //    background-color: transparent;
+  //  }
+  //
+  //  .nav-level-2.show .row-level-2 {
+  //    border-bottom: 1px solid rgba(white, 0.2);
+  //  }
+  //
+  //  .nav-level-3 {
+  //    .row-level-3 {
+  //      //display: none;
+  //    }
+  //
+  //    &.show .row-level-3 {
+  //      display: block;
+  //      border-bottom: 1px solid $gray-300;
+  //    }
+  //  }
+  //}
 
   .path-frontpage .paragraph--type--header-banner {
     margin-bottom: 0 !important;
@@ -246,21 +246,6 @@
     display: inline-block;
     padding: 0;
     position: relative;
-    color: #fff;
-
-    &:before {
-      font-family: "icomoon" !important;
-      content: "\ec13";
-    }
-  }
-
-  .section-icon {
-    display: none;
-    margin-bottom: 15px;
-    text-align: center;
-
-    img {
-      width: 50px;
-    }
+    color: white;
   }
 }
