--- a/themes/openy_themes/openy_carnation/src/scss/modules/_header.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_header.scss
@@ -25,26 +25,6 @@
   }
 }
 
-// header banner section
-body.with-banner {
-  .banner-zone-node {
-    margin-top: 43px;
-  }
-
-  .layout-container .top-navs {
-    background: none;
-    transition: background-color 0.5s ease;
-
-    &.affix {
-      background-color: $gray-700;
-    }
-
-    //&.menu-in {
-    //  background-color: $blue;
-    //}
-  }
-}
-
 .page-head__top-menu {
   background-color: rgba($primary, .8);
 
@@ -79,13 +59,9 @@ body.with-banner {
   position: absolute;
   bottom: 22px;
 
-  .search-form-wrapper {
-
-  }
-
   form {
     display: block;
-    margin: 0 120px;
+    margin: 0 10%;
     position: relative;
     z-index: 1;
     background: transparent;
@@ -101,6 +77,7 @@ body.with-banner {
   }
 }
 
+// search input field
 .search-input {
   border: 1px solid #ccc;
   border-radius: 6px;
@@ -108,24 +85,27 @@ body.with-banner {
   height: 40px;
   line-height: 26px;
   padding: 7px 35px 7px 10px;
-  font-size: 14px;
+  font-size: 16px;
+  color: $gray-400;
 
-  @media (min-width: 62em) {
-    padding:7px 10px 7px 40px;
+  @include media-breakpoint-up(lg) {
+    padding: 7px 10px 7px 40px;
   }
 }
 
+// search icon
 .fa.search-input-decoration {
   position: absolute;
   font-size: 22px;
   color: $pink;
-  margin-top: 10px;
-  margin-left: 8px;
-  right: 25px;
   width: 25px;
+  right: 25px;
+  top: 50%;
+  margin-top: -12px;
 
-  @media (min-width: 62em) {
-    left:5px;
+  @include media-breakpoint-up(lg) {
+    left: 10px;
+    right: auto;
   }
 }
 
