Finished up mobile menu.

--- a/themes/openy_themes/openy_carnation/src/scss/layouts/_mob.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/layouts/_mob.scss
@@ -22,11 +22,11 @@
   //  margin-top: 52px;
   //}
 
-  .page-head__top-menu {
-    #block-openy-carnation-main-menu .menu-item-home {
-      display: none;
-    }
-  }
+  //.page-head__top-menu {
+  //  #block-openy-carnation-main-menu .menu-item-home {
+  //    display: none;
+  //  }
+  //}
 
   //.top-navs {
   //  .navbar-default {
@@ -235,17 +235,5 @@
         }
       }
     }
-  }
-}
-
-.nav-level-3 {
-  padding-top: 25px;
-
-  > a {
-    min-height: 34px;
-    display: inline-block;
-    padding: 0;
-    position: relative;
-    color: white;
   }
 }
