--- a/themes/openy_themes/openy_carnation/templates/menu/menu--account--secondary-menu.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/menu/menu--account--secondary-menu.html.twig
@@ -31,7 +31,7 @@
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    {% set attributes = attributes.addClass(['navbar-nav flex-column flex-lg-row float-right']) %}
+    {% set attributes = attributes.addClass(['navbar-nav flex-lg-column flex-lg-row float-lg-right']) %}
     <ul{{ attributes }}>
     {% for item in items %}
       {%
