--- a/themes/openy_themes/openy_carnation/templates/menu/menu--main--primary-menu.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/menu/menu--main--primary-menu.html.twig
@@ -37,14 +37,14 @@
       {% set ia = ia.addClass('nav-item nav-level-2') %}
       <li{{ item.attributes.addClass('menu-item-' ~ item.title|clean_class) }}>
         {% if item.below %}
-          <a data-toggle="dropdown" href="{{ item.url }}" class="nav-link">
+          <a data-toggle="dropdown" href="{{ item.url }}" class="nav-link text-uppercase">
             {{ item.title }}
             <i class="fa fa-angle-up" aria-hidden="true"></i>
             <i class="fa fa-angle-down" aria-hidden="true"></i>
           </a>
           {{ menus.menu_links_level_2(item.below, attributes, menu_level + 1) }}
         {% else %}
-          <a href="{{ item.url }}" class="nav-link">
+          <a href="{{ item.url }}" class="nav-link text-uppercase">
             {{ item.title }}
           </a>
         {% endif %}
