--- a/themes/openy_themes/openy_carnation/templates/menu/mobile/menu--main--mobile-menu.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/menu/mobile/menu--main--mobile-menu.html.twig
@@ -31,20 +31,20 @@
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    <ul{{ attributes.addClass('nav flex-column') }}>
+    <ul{{ attributes.addClass('nav navbar-nav') }}>
     {% for item in items %}
       {% set ia = item.attributes %}
       {% set ia = ia.addClass('nav-item nav-level-2') %}
       <li{{ item.attributes.addClass('menu-item-' ~ item.title|clean_class) }}>
         {% if item.below %}
-          <a data-toggle="dropdown" href="{{ item.url }}" class="nav-link">
+          <a data-toggle="dropdown" href="{{ item.url }}" class="nav-link dropdown-toggle text-uppercase">
             {{ item.title }}
             <i class="fa fa-angle-up" aria-hidden="true"></i>
             <i class="fa fa-angle-down" aria-hidden="true"></i>
           </a>
           {{ menus.menu_links_level_2(item.below, attributes, menu_level + 1) }}
         {% else %}
-          <a href="{{ item.url }}" class="nav-link">
+          <a href="{{ item.url }}" class="nav-link text-uppercase">
             {{ item.title }}
           </a>
         {% endif %}
@@ -57,38 +57,39 @@
 {% macro menu_links_level_2(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    <ul class="dropdown-menu row-level-2">
+    <ul class="dropdown-menu row-level-2 px-2">
     {% for item in items %}
-      {% set ia = item.attributes.addClass(['nav-level-3 col-md-3 col-lg-2 menu-item-' ~ item.title|clean_class]) %}
+      {% set ia = item.attributes.addClass(['nav-item nav-level-3 menu-item-' ~ item.title|clean_class]) %}
       <li{{ ia }}>
-        {% if item.below %}
-          <a href="{{ item.url }}">
-            <i class="fa fa-angle-right" aria-hidden="true"></i>
+        {#{% if item.below %}#}
+          {#<a href="{{ item.url }}" class="nav-link">#}
+            {#{{ item.title }}#}
+          {#</a>#}
+          {#{{ menus.menu_links_level_3(item.below, item, attributes, menu_level) }}#}
+        {#{% else %}#}
+          <a href="{{ item.url }}" class="nav-link">
             {{ item.title }}
           </a>
-          {#{{ menus.menu_links_level_3(item.below, item, attributes, menu_level) }}#}
-        {% else %}
-          {{ link(item.title, item.url) }}
-        {% endif %}
+        {#{% endif %}#}
       </li>
     {% endfor %}
     </ul>
   {% endif %}
 {% endmacro %}
 
-{% macro menu_links_level_3(items, parent, attributes, menu_level) %}
-  {% import _self as menus %}
-  {% if items %}
-    <ul class="row-level-3">
-      {% set ia = parent.attributes %}
-      {% set ia = ia.addClass('nav-level-4') %}
-      {% for item in items %}
-        {% set ia = item.attributes %}
-        {% set ia = ia.addClass('nav-level-4') %}
-        <li{{ ia }}>
-          {{ link(item.title, item.url) }}
-        </li>
-      {% endfor %}
-    </ul>
-  {% endif %}
-{% endmacro %}
+{#{% macro menu_links_level_3(items, parent, attributes, menu_level) %}#}
+  {#{% import _self as menus %}#}
+  {#{% if items %}#}
+    {#<ul class="row-level-3">#}
+      {#{% set ia = parent.attributes %}#}
+      {#{% set ia = ia.addClass('nav-level-4') %}#}
+      {#{% for item in items %}#}
+        {#{% set ia = item.attributes %}#}
+        {#{% set ia = ia.addClass('nav-level-4') %}#}
+        {#<li{{ ia }}>#}
+          {#{{ link(item.title, item.url) }}#}
+        {#</li>#}
+      {#{% endfor %}#}
+    {#</ul>#}
+  {#{% endif %}#}
+{#{% endmacro %}#}
