--- a/themes/openy_themes/openy_carnation/src/scss/layouts/_tab.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/layouts/_tab.scss
@@ -55,9 +55,9 @@
     margin-bottom: -60px;
   }
 
-  .banner-zone-node .banner-cta-section {
-    padding-top: 0;
-  }
+  //.banner-zone-node .banner-cta-section {
+  //  padding-top: 0;
+  //}
 
   .paragraph-gallery .carousel .carousel-control {
     width: 55px;
