--- a/themes/openy_themes/openy_carnation/templates/node/node--branch--full.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/node/node--branch--full.html.twig
@@ -150,7 +150,7 @@ set classes = [
 {# Branch content #}
 <div class="container">
   <div class="row">
-    <div class="main-region col-sm-12">
+    <div class="main-region col-12">
       <div class="branch-content">
         <article{{ attributes.addClass(classes) }}>
           <div{{ content_attributes.addClass('node__content') }}>
