--- a/themes/openy_themes/openy_carnation/templates/node/node--camp--full.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/node/node--camp--full.html.twig
@@ -132,7 +132,7 @@
 {# Camp content #}
 <div class="container">
   <div class="row">
-    <div class="main-region col-sm-12">
+    <div class="main-region col-12">
       <article{{ attributes.addClass(classes) }}>
         <h2>{{ 'Welcome to'|t }} {% spaceless %}{{ label }}{% endspaceless %}!</h2>
         <hr>
