--- a/themes/openy_themes/openy_carnation/templates/node/node--facility--full.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/node/node--facility--full.html.twig
@@ -85,7 +85,7 @@ set classes = [
 
 <div class="container two-columns-container">
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-12">
       <h1{{ title_attributes.addClass('node-title') }}>{{ label }}</h1>
     </div>
   </div>
