--- a/themes/openy_themes/openy_carnation/templates/node/node--program--full.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/node/node--program--full.html.twig
@@ -97,7 +97,7 @@
   <div{{ content_attributes.addClass('content').setAttribute('style', bg_color) }}>
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 main">
+        <div class="col-12 main">
           <h1>{{ label }}</h1>
           <div class="icon">
             {{ content.field_program_icon }}
