--- a/themes/openy_themes/openy_carnation/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/page/page.html.twig
@@ -51,7 +51,7 @@
 
   <div class="top-navs fixed-top d-block d-lg-none">
     <nav class="nav-global navbar-default navbar navbar-dark">
-      <div class="container-fluid">
+      <div class="container-fluid p-0">
         <div class="d-flex w-100">
 
           <div class="col-auto mr-auto">
@@ -74,7 +74,7 @@
   <div id="sidebar" class="sidebar sidebar-left fixed-top collapse fade">
     <div class="row px-3 px-lg-0">
 
-      <div class="search-form-wrapper col-12">
+      <div class="search-form-wrapper col-12 border-top border-bottom">
         <form method="get" action="{{ base_path }}search">
           <i class="fa fa-search search-input-decoration" aria-hidden="true"></i>
           <input type="search" name="query" class="search-input" placeholder="Search">
