--- a/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--header-banner.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--header-banner.html.twig
@@ -54,7 +54,7 @@
   <div class="banner-cta">
    <div class="container">
     <div class="row">
-      <div class="col-sm-12 col-md-12">
+      <div class="col-12">
         <div class="banner-cta-section">
           <h1 class="header-banner-description">
             {{ content.field_hbaner_prgf_description}}
