--- a/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--small-banner.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--small-banner.html.twig
@@ -53,7 +53,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 col-md-8">
+      <div class="col-12 col-md-8">
         <div class="banner-cta-section">
           <h3 class="banner-title">
             {{ content.field_prgf_headline }}
