--- a/themes/openy_themes/openy_carnation/src/scss/modules/_blogs.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_blogs.scss
@@ -1,23 +1,20 @@
-.paragraph--type--blog-posts-listing,
-.view-taxonomy-term {
-  .blog-more-teaser form.views-exposed-form {
-    padding: 25px 40px;
-    border-radius: 8px;
-    box-shadow: 0 3px 30px 2px rgba(0, 0, 0, 0.05);
-    height: 92px;
-    display: table;
-    background-color: #ebebeb;
-    width: 100%;
-    margin-bottom: 49px;
-  }
+.blog-more-teaser form.views-exposed-form {
+  padding: 25px 40px;
+  border-radius: 8px;
+  box-shadow: 0 3px 30px 2px rgba(0, 0, 0, 0.05);
+  height: 92px;
+  display: table;
+  background-color: #ebebeb;
+  width: 100%;
+  margin-bottom: 49px;
+}
 
-  .node--type-blog.node--view-mode-teaser {
-    margin: auto;
-    max-width: 373px;
-    width: 100%;
-  }
+.node--type-blog.node--view-mode-teaser {
+  margin: auto;
+  max-width: 373px;
+  width: 100%;
 
-  .node--type-blog.node--view-mode-teaser.blog-photo .inner-wrapper {
+  .inner-wrapper {
     margin: 15px 0;
     position: relative;
     overflow: hidden;
@@ -34,19 +31,19 @@
       width: 100%;
       text-align: left;
     }
-  }
 
-  img {
-    width: 100%;
-  }
+    img {
+      width: 100%;
+    }
 
-  h4 a,
-  h2 a {
-    color: inherit;
-  }
+    h6 a,
+    h2 a {
+      color: inherit;
+    }
 
-  h4,
-  h2 {
-    color: white;
+    h6,
+    h2 {
+      color: white;
+    }
   }
 }
