--- a/themes/openy_themes/openy_carnation/src/scss/modules/_headerbanner.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_headerbanner.scss
@@ -1,19 +1,20 @@
 // header banner section
 body.with-banner {
-  //.banner-zone-node {
-  //  margin-top: 52px;
-  //
-  //  @include media-breakpoint-up(lg) {
-  //    margin-top: 43px;
-  //  }
-  //}
-
   .layout-container .top-navs {
-    background: none;
+    background-color: rgba($primary, .8);
     transition: background-color 0.5s ease;
+
+    @include media-breakpoint-up(lg) {
+      background-color: transparent;
+    }
 
     &.affix {
       background-color: $gray-700;
+    }
+
+    &.affix.menu-in,
+    &.menu-in {
+      background-color: $primary;
     }
   }
 }
@@ -32,35 +33,11 @@ body.with-banner {
   .banner-cta {
     position: absolute;
     top: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .container {
-    align-items: center;
-    margin-bottom: auto;
-    margin-top: auto;
-  }
-
-  .banner-cta-section {
-    padding-top: 96px;
-    padding-bottom: 0;
   }
 
   h1 {
     font-size: 60px;
-    color: #fff;
-    font-weight: 500;
     letter-spacing: -2px;
-    text-transform: uppercase;
-    text-align: center;
-  }
-
-  .banner-title {
-    @extend h1;
-    text-align: left;
   }
 }
 
