--- a/themes/openy_themes/openy_carnation/src/scss/modules/_page.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_page.scss
@@ -40,14 +40,14 @@ body {
   }
 }
 
-.paragraph--column-in-a-grid {
-  max-width: 1080px;
-  margin: 0 auto;
-}
+//.paragraph--column-in-a-grid {
+//  max-width: 1080px;
+//  margin: 0 auto;
+//}
 
-.region.region-content {
-  //padding: 40px 0;
-}
+//.region.region-content {
+//  padding: 40px 0;
+//}
 
 .tabs {
   text-align: center;
@@ -70,7 +70,7 @@ body {
   background-image: url(../img/logo-color.png);
 }
 
-.node,
+//.node,
 .two-columns-container,
 .user-login,
 .webform-submission-form {
