--- a/themes/openy_themes/openy_carnation/templates/custom/openy-calc-form-summary.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/custom/openy-calc-form-summary.html.twig
@@ -1,11 +1,11 @@
 <div class="calc-summary">
   <div class="row row-eq-height">
-    <div class="col-md-6 col-sm-12 selected-branch calc-summary-col">
+    <div class="col-sm-12 col-md-6 selected-branch calc-summary-col">
       <h2>{{ 'Your selected branch'|t }}</h2>
       <div class="selected-branch-map">{{ map }}</div>
       <div>{{ result.location }}</div>
     </div>
-    <div class="col-md-6 col-sm-12 selected-membership calc-summary-col">
+    <div class="col-sm-12 col-md-6 selected-membership calc-summary-col">
       <h2>{{ 'Your selected membership'|t }}</h2>
       <div>{{ result.membership }}</div>
       {% if result.price %}
