--- a/themes/openy_themes/openy_carnation/templates/menu/menu--account--secondary-menu.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/menu/menu--account--secondary-menu.html.twig
@@ -31,7 +31,7 @@
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    {% set attributes = attributes.addClass(['navbar-nav flex-lg-column flex-lg-row float-lg-right']) %}
+    {% set attributes = attributes.addClass(['navbar-nav flex-row float-right']) %}
     <ul{{ attributes }}>
     {% for item in items %}
       {%
@@ -42,23 +42,16 @@
         ]
       %}
       <li{{ item.attributes.addClass(classes) }}>
-        {% if not item.below %}
-          {{ link(item.title, item.url, item.attributes.addClass('px-4')) }}
-        {% else %}
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        {% if item.below %}
+          <a data-toggle="dropdown" href="{{ item.url }}" class="nav-link px-4">
             {{ item.title }}
-            <b class="caret"></b>
+            <i class="fa fa-angle-up" aria-hidden="true"></i>
+            <i class="fa fa-angle-down" aria-hidden="true"></i>
           </a>
-          <ul class="dropdown-menu">
-            {% for inner_item in item.below %}
-              <li>
-                {{ link(inner_item.title, inner_item.url) }}
-              </li>
-              {% if not loop.last %}
-                <li class="divider"></li>
-              {% endif %}
-            {% endfor %}
-          </ul>
+        {% else %}
+          <a href="{{ item.url }}" class="nav-link px-4">
+            {{ item.title }}
+          </a>
         {% endif %}
       </li>
     {% endfor %}
