--- a/themes/openy_themes/openy_carnation/templates/menu/menu--main--primary-menu.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/menu/menu--main--primary-menu.html.twig
@@ -63,13 +63,13 @@
 {% macro menu_links_level_2(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    <ul class="dropdown-menu row-level-2 d-flex fade">
+    <ul class="dropdown-menu row-level-2 fade">
     {% for item in items %}
       {% set ia = item.attributes.addClass(['nav-level-3 col-md-3 col-lg-2 menu-item-' ~ item.title|clean_class]) %}
       <li{{ ia }}>
         {% if item.below %}
-          <a href="{{ item.url }}">
-            <i class="fa fa-angle-right" aria-hidden="true"></i>
+          <a href="{{ item.url }}" class="d-flex">
+            <i class="fa fa-angle-right pr-2" aria-hidden="true"></i>
             {{ item.title }}
           </a>
           {{ menus.menu_links_level_3(item.below, item, attributes, menu_level) }}
