--- a/themes/openy_themes/openy_carnation/templates/menu/mobile/menu--main--mobile-menu.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/menu/mobile/menu--main--mobile-menu.html.twig
@@ -39,8 +39,8 @@
         {% if item.below %}
           <a data-toggle="dropdown" href="{{ item.url }}" class="nav-link dropdown-toggle text-uppercase">
             {{ item.title }}
-            <i class="fa fa-angle-up" aria-hidden="true"></i>
-            <i class="fa fa-angle-down" aria-hidden="true"></i>
+            <i class="fa fa-caret-up" aria-hidden="true"></i>
+            <i class="fa fa-caret-down" aria-hidden="true"></i>
           </a>
           {{ menus.menu_links_level_2(item.below, attributes, menu_level + 1) }}
         {% else %}
