--- a/themes/openy_themes/openy_carnation/templates/node/node--landing-page--full.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/node/node--landing-page--full.html.twig
@@ -109,7 +109,7 @@
     {% if content.field_content is not empty %}
       <article{{ attributes.addClass(content_classes) }}>
         {% if node.field_lp_layout.value == "one_column" %}
-        <div class="main-region col-sm-12">
+        <div class="main-region col-12">
           {% endif %}
           {% if ( node.field_lp_layout.value == "two_column" ) or ( node.field_lp_layout.value == "two_column_fixed" ) %}
           <div class="two-column">
