--- a/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--grid-content--default.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--grid-content--default.html.twig
@@ -38,25 +38,17 @@
 #}
 {%
 set classes = [
+  'row',
   'paragraph',
-  'row-eq-height',
   'paragraph--column-in-a-grid',
   'paragraph--type--' ~ paragraph.bundle|clean_class,
   view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 ]
 %}
-{% set grid_style = content.field_prgf_grid_style|render|trim %}
-{% if grid_style == '2' %}
-  {% set item_class = 'col-xs-12 col-sm-6 row-eq-height' %}
-{% elseif grid_style == '3' %}
-  {% set item_class = 'col-xs-12 col-sm-4 row-eq-height' %}
-{% elseif grid_style == '4' %}
-  {% set item_class = 'col-xs-12 col-sm-3 row-eq-height' %}
-{% endif %}
 <div{{ attributes.addClass(classes) }}>
   {% for key, item in content.field_grid_columns %}
     {% if key matches '/^\\d+$/' %}
-    <div class="{{ item_class }}">
+    <div class="col-12 col-lg">
       {{ item }}
     </div>
     {% endif %}
