--- a/themes/openy_themes/openy_carnation/templates/views/views-view-unformatted--listing-blog-posts--block.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/views/views-view-unformatted--listing-blog-posts--block.html.twig
@@ -20,7 +20,7 @@
 {% if title %}
   <h3>{{ title }}</h3>
 {% endif %}
-<div class="blog-more-teaser-results-wrapper clearfix">
+<div class="blog-more-teaser-results-wrapper row">
 {% for row in rows %}
   {%
     set row_classes = [
